--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.1",
     "@ant-design/pro-components": "^2.6.48",
-    "@umijs/renderer-react": "^4.4.6",
-    "@umijs/route-utils": "^2.2.2",
     "@babel/runtime": "^7.24.4",
+    "@nutui/nutui-react-taro": "^3.0.15",
     "@tarojs/components": "4.1.1",
     "@tarojs/helper": "4.1.1",
     "@tarojs/plugin-framework-react": "4.1.1",
@@ -58,6 +57,8 @@
     "@tarojs/shared": "4.1.1",
     "@tarojs/taro": "^4.1.1",
     "@types/antd": "^0.12.32",
+    "@umijs/renderer-react": "^4.4.6",
+    "@umijs/route-utils": "^2.2.2",
     "antd": "^5.13.2",
     "antd-style": "^3.6.1",
     "classnames": "^2.5.1",
@@ -84,7 +85,6 @@
     "@tarojs/taro-loader": "4.1.1",
     "@tarojs/webpack5-runner": "4.1.1",
     "@types/node": "^18",
-    "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
     "babel-preset-taro": "4.1.1",
     "eslint": "^8.57.0",
