--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "miniProgram",
   "description": "微信小程序",
-  "appid": "wx3ec42ab084cd7d71",
+  "appid": "wx3de0567e4f64bb42",
   "setting": {
     "urlCheck": true,
     "es6": false,
